# Panthera

./: .gitignore  README.md  agent.py  claude.md  config.py  conversation.py  embeddings.py  main.py  manage_plugins.py  memory.py  parser.py  plugins.py  prompts.py  requirements-dev.txt  requirements.txt  sysinfo.py  tools.py  utils.py  webapp.py  websearch.py
.github/workflows/: ci.yml
gui/: Cargo.toml  README.md
gui/src/: main.rs
plugins/: README.md  roll_dice.py
tests/: conftest.py  test_agent.py  test_config.py  test_manage_plugins.py  test_memory.py  test_parser.py  test_plugins.py  test_sysinfo.py  test_tools.py  test_utils.py  test_webapp.py  test_websearch.py
web/static/css/: style.css
web/static/js/: app.js
web/templates/: index.html
